# SCLManager

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  build-for-win.sh  cargo-watch-clippy.sh  jest.config.mjs  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: audit.yml  rust.yml
__tests__/: page.test.js
app/: globals.css  layout.tsx  page.tsx
bindings/: types.ts
bindings/hooks/: useAirframe.ts  useFlyableAirframes.ts
components/ui/branding/: index.tsx
components/ui/listbox/: index.tsx  listbox.tsx
components/ui/select/: index.ts  select-airframe.tsx
components/ui/table/: index.tsx
components/ui/tables/: index.ts  table-airframe-explorer.tsx
components/widgets/: loadout-explorer.tsx
components/widgets/airframe-loadout-explorer/: index.tsx
components/widgets/airframe-selector-listbox/: index.tsx
components/widgets/table-loadout-explorer/: index.tsx
data/: airframes.json  launchers.json  weapons.json
public/data/: launchers.json
screen/: app.tsx
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: airframes.json
src-tauri/src/: main.rs
src-tauri/src/handlers/: airframe.rs  mod.rs
src-tauri/src/models/: airframe.rs  imports.rs  payload.rs
src/models/: airframe.rs  dcs.rs  imports.rs  mod.rs  payload.rs
src/ui/: app.rs  mod.rs
styles/: style.module.scss
test/: jest.setup.js
test/__tests__/: page.test.js
tools/: F-15ESE.lua  F-16C_50.lua  weapons_export.lua
utils/: event.utils.ts  formatting.utils.ts  index.ts  string.extensions.ts  type.utils.ts
(+1 files in other folders)
